fix(surface): back-port SIMD flag to prank_faster; pin distinct vs faster+sparsify equivalence
- distro/prank_faster: add the module-guarded --add-modules jdk.incubator.vector
  block that prank/prank.sh gained in f2885c30. The "faster" launcher was silently
  running surface generation on the scalar fallback while the default strategy is
  now SIMD (packed_distinct_v3). Document the flag in jvm-performance-tuning.md.
- SurfaceStrategyTest: add distinctStrategiesAreNearDuplicateSupersetOfFasterPlusSparsify,
  pinning the actual geometric relationship between the distinct strategies and the
  historical faster+0.05A-sparsify path. They are NOT bit-identical: sparsify drops
  points within 0.05A of a kept point, distinct drops only exactly coincident points,
  so distinct is a coordinate-superset (2src tess=2: 6786 vs 6785). The test pins
  superset + surplus-only-near-duplicates + tiny surplus, the strongest true invariant.